--- a/all_rag_techniques/simple_rag.ipynb
+++ b/all_rag_techniques/simple_rag.ipynb
@@ -84,13 +84,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xVaHWFwh-BE4",
-        "outputId": "920bbc38-353d-46c4-9490-8c73d5b401d8"
+        "outputId": "920bbc38-353d-46c4-9490-8c73d5b401d8",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -367,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -396,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "ha6ASRqq-BE5"
       },
@@ -406,7 +407,6 @@
         "import sys\n",
         "from dotenv import load_dotenv\n",
         "from google.colab import userdata\n",
-        "\n",
         "\n",
         "\n",
         "# Load environment variables from a .env file\n",
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "KF5O4Wk4-BE6"
       },
@@ -513,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "38suL-tJ-BE7"
       },
@@ -624,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "8aysEXUh-BE7",
         "colab": {
@@ -754,7 +754,8 @@
             "12a50000ee524c8384115cd59c58d0b3"
           ]
         },
-        "outputId": "ec70f3f5-6569-4390-b36c-0f56de9e1921"
+        "outputId": "ec70f3f5-6569-4390-b36c-0f56de9e1921",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -941,7 +942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "wgVN3-y1-BE7"
       },
@@ -961,7 +962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
